@@ -12,13 +12,14 @@
 ##############################################################################
 """Support for ZODB sandboxes in ZTC
 
-$Id: sandbox.py,v 1.2 2004/08/19 15:31:26 shh42 Exp $
+$Id$
 """
 
 import ZopeLite as Zope2
 import transaction
 import base
 import utils
+import connections
 
 
 class Sandboxed:
@@ -32,7 +33,7 @@ class Sandboxed:
     def _app(self):
         '''Returns the app object for a test.'''
         app = Zope2.app(Zope2.sandbox().open())
-        base._connections.register(app._p_jar)
+        connections.register(app._p_jar)
         AppZapper().set(app)
         return utils.makerequest(app)
 
@@ -40,7 +41,7 @@ class Sandboxed:
         '''Clears the transaction and the AppZapper.'''
         transaction.abort()
         AppZapper().clear()
-        base.closeConnections()
+        connections.closeAll()
 
 
 class AppZapper:
