@@ -13,6 +13,8 @@
 - Fixed _refreshSkinData() helper to work with CMF >= 1.5.
 - Fixed a bug where using sessions in sandboxed (functional) tests would cause
   connection pool depletion and subsequent hangs. Thanks to Balazs Ree.
+- Encapsulated the ConnectionRegistry in its own module, connections.py.
+  Reusing the registry from other modules becomes a lot cleaner as a result.
 
 0.9.6
 - Dropped support for Zope 2.5 as it lacks the setSecurityManager() API.
